--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "scripts": {
     "dev": "turbo run dev --filter=website",
+    "dev:api": "turbo run dev --filter=api",
+    "dev:all": "turbo run dev",
     "website": "turbo run dev --filter=website",
+    "api": "turbo run dev --filter=api",
     "build": "turbo run build",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "seed": "pnpm --filter api run seed"
   },
   "devDependencies": {
     "turbo": "^2.6.3"
