--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,11 +1,17 @@
 # Local PostgreSQL (via docker compose)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5433/virtual_clinic
+# DATABASE_URL=postgresql://postgres:postgres@localhost:5433/virtual_clinic
 
-# Supabase PostgreSQL (alternative)
-# DATABASE_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres
+# Supabase PostgreSQL (pooled connection for serverless — port 6543)
+DATABASE_URL=postgres://postgres.[PROJECT_REF]:[PASSWORD]@aws-1-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require
+
+# Supabase PostgreSQL (direct connection for migrations — port 5432)
+# DATABASE_URL_DIRECT=postgres://postgres.[PROJECT_REF]:[PASSWORD]@aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
 
 # Azure OpenAI
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_DEPLOYMENT=
+
+# Authentication (Supabase JWT secret — find in Supabase Dashboard > Project Settings > API)
+SUPABASE_JWT_SECRET=
 
