--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,17 +13,20 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx scripts/seed.ts"
+    "db:reset": "tsx scripts/reset.ts",
+    "db:seed": "tsx scripts/seed.ts",
+    "create-tokens": "tsx scripts/create-tokens.ts"
   },
   "dependencies": {
     "@ai-sdk/azure": "^1.3.22",
+    "@scalar/nextjs-api-reference": "^0.9.18",
     "ai": "^4.3.16",
     "drizzle-orm": "^0.44.2",
+    "jose": "^6.1.3",
     "next": "^15.3.3",
     "postgres": "^3.4.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@scalar/nextjs-api-reference": "^0.9.18",
     "zod": "^3.25.67"
   },
   "devDependencies": {
