update client example repo

--- a/examples/.env.example
+++ b/examples/.env.example
@@ -1,11 +1,12 @@
-# Required — JWT token provided by workshop organizers
-VIRTUAL_CLINIC_TOKEN=your-token-here
+# Required -- JWT token provided by workshop organizers
+VIRTUAL_CLINIC_TOKEN=***
 
 # API base URL
 VIRTUAL_CLINIC_BASE_URL=https://virtual-clinic-api.vercel.app
 
-# Optional — override which patient to interview (UUID)
-# VIRTUAL_CLINIC_PATIENT_ID=
+# Doctor agent credentials
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_API_KEY=***
+AZURE_OPENAI_DEPLOYMENT=gpt5
+# AZURE_OPENAI_API_VERSION=2024-08-01-preview
 
-# Optional — task type: diagnosis, treatment, or event
-# VIRTUAL_CLINIC_TASK_TYPE=diagnosis
